--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solidity-coverage": "^0.7.21",
     "typechain": "^8.0.0",
-    "web3": "^1.7.0"
+    "web3": "^1.7.0",
+    "hardhat-ignore-warnings": "^0.2.6"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.0",
